--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@
             </svg></a>
 
         <div class="headerbtn">
-            <a href="index" class="main hbtn">Головна</a>
-            <a href="about" class="team hbtn">Про нас</a>
-            <a href="faq" class="faq hbtn">ЧАПИ</a>
-                  <a href="translation" class="addtranslation hbtn">Додати переклад</a>
+            <a href="index" class="main hbtn">Галоўная</a>
+            <a href="about" class="team hbtn">Пра нас</a>
+            <a href="faq" class="faq hbtn">FAQ</a>
+                  <a href="translation" class="addtranslation hbtn">Дадаць пераклад</a>
 
       <script src="https://kit.fontawesome.com/a0ff110df7.js" crossorigin="anonymous"></script>
-      <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Підтримати</a>
+      <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Падтрымаць</a>
 
         </div>
     </div>
@@ -82,7 +82,7 @@
                 <p>Сайт СУМ є архівом аматорської спільноти перекладачів, що працюють над українізацією, зосереджуючись переважно на перекладі модів для Minecraft. Ми використовуємо сучасні підходи до перекладу, такі як адаптація та словотвір.</p>
                 <p>У нашому повсякденному житті ми займаємося різними справами, але об'єднуємося тут для популяризації української мови в іграх. Наразі українська локалізація переживає свої найкращі часи, частка української мови в іграх невпинно зростає. Саме тому ми вирішили перекласти якомога більше модів для Minecraft українською мовою.</p>
             </div>
-            <h2 class="faqtitle">Команда</h2>
+            <h2 class="faqtitle">Каманда</h2>
             <div class="paragraph">
                 <div class="authorcontainer">
                     <div id="MEGATREX4" class="articleauthor"></div>
