--- a/FAQ.html
+++ b/FAQ.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/scrollbar.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>СУМ - часті запитання</title>
+    <title>Сновія - частыя пытаньні</title>
     <meta name="description">
     <script rel="preload" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -60,14 +60,14 @@
             </svg></a>
 
         <div class="headerbtn">
-            <a href="index" class="main hbtn">Головна</a>
-            <a href="about" class="team hbtn">Про нас</a>
-            <a href="faq" class="faq hbtn">ЧАПИ</a>
+            <a href="index" class="main hbtn">Галоўная</a>
+            <a href="about" class="team hbtn">Пра нас</a>
+            <a href="faq" class="faq hbtn">FAQ</a>
 
-                  <a href="translation" class="addtranslation hbtn">Додати переклад</a>
+                  <a href="translation" class="addtranslation hbtn">Дадаць пераклад</a>
 
       <script src="https://kit.fontawesome.com/a0ff110df7.js" crossorigin="anonymous"></script>
-      <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Підтримати</a>
+      <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Падтрымаць</a>
 
         </div>
     </div>
@@ -79,46 +79,44 @@
             <div class="authorcontainer">
                 <div id="MEGATREX4" class="articleauthor"></div>
             </div>
-            <h2 class="faqtitle">Часті запитання</h2>
+            <h2 class="faqtitle">Часта задаваныя пытаньні</h2>
             <div class="contents"></div>
             <div class="paragraph">
 
-                <h4>Що це за сайт?</h4>
-                <p>Сайт СУМ — це архів аматорської спільноти перекладачів, що працюють на збагачення українізації,
-                    переважно майнкрафт модів. Ми використовуємо сучасні підходи до перекладу, як-от адаптації та
-                    словотвір.</p>
+                <h4>Што гэта за сайт?</h4>
+                <p>Сновія — гэта архіў аматарскай супольнасці перакладчыкаў, якія працуюць над узбагачэннем беларусізацыі, 
+                    галоўным чынам модаў Minecraft. Мы выкарыстоўваем сучасныя падыходы да перакладу, такія як адаптацыі і словаўтварэнне.</p>
 
-                <h4>Як почати перекладати?</h4>
-                <h3>Майнкрафт</h3>
-                <p>Перед тим як почати діставати файли спробуйте пошукати Crowdin проєкту, часто його публікують на
-                    Discord-серверах проєктів, або безпосередньо на сторінках модів.</p>
-                <h2>Що робити якщо Crowdin у проєкта є, але там немає української?</h2>
+                <h4>Як пачаць перакладаць?</h4>
+                <h3>Minecraft</h3>
+                <p>Перад тым, як пачаць спампоўваць файлы, паспрабуйце пашукаць Crowdin праекта, 
+                   ён часта публікуецца на серверах Discord праекта або непасрэдна на старонках модаў.</p>
+                <h2>Што рабіць, калі ў праекце ёсць Crowdin, але няма беларускай?</h2>
                 <p>
                 <ol type="1">
                     <li>Створіть тему на Crowdin де англійською мовою представтесь, напишіть що бажаєте перекласти їх
                         мод рідною мовою і що це дуже важливо для вас. Обов'язково зазначте свій рівень
                         англійської(Beginner, Elementary, Intermediate, Upper-Intermediate, Advanced) та української(ви
                         скоріш за все Native Speaker).</li>
-                    <li>Можете також прийти на Discord-сервер проєкту і спитати там чи можна якось перекласти їх мод.
+                    <li>Вы таксама можаце зайсці на сервер праекта ў Discord і спытаць там, ці можна неяк перакласці іх мод.
                     </li>
                 </ol>
                 </p>
-                <p>Завжди будьте готові що розробники можуть відмовитись, або проігнорувати.</p>
-                <h2>Crowdin у проєкта немає що далі?</h2>
+                <p>Заўсёды будзьце гатовыя да таго, што распрацоўшчыкі могуць адмовіць альбо праігнараваць.</p>
+                <h2>Crowdin не мае праекта, што далей?</h2>
                 <p>
                 <ol type="1">
-                    <li>Перевіряємо походження моду (це обов'язково, щоб не перекласти від автора з *осії)</li>
-                    <li>Завантажити мод з Modrinth або CurseForge</li>
-                    <li>Відкрити файл моду за допомогою архіватора (напр. nanaZip)</li>
-                    <li>Переходимо за таким шляхом <span class="selection"> assets → [Тека з назвою моду] → lang</li>
-                    <li>Копіюємо на робочий стіл</span>
-                        файл <span class="selection">en_us.json</span>(перекладаємо виключно з англійської, або з мови оригіналу, якщо таку знаємо)
+                    <li>Спампуйце мод з Modrinth або CurseForge</li>
+                    <li>Адкрыйце файл мода з дапамогай архіватара</li>
+                    <li>Пойдзем гэтым шляхам <span class="selection"> assets → [Тэчка з назвай мода] → lang</li>
+                    <li>Капіюем на працоўны стол</span>
+                        файл <span class="selection">en_us.json</span> (перакладаем выключна з ангельскай, альбо з мовы арыгінала, калі мы яе ведаем)
                     </li>
-                    <li>Після перекладу зберігаємо файл як <span class="selection">uk_ua.json</span> </li>
+                    <li>Пасля перакладу захавайце файл як <span class="selection">be_by.json</span> </li>
                 </ol>
                 </p>
                 <p>
-                    Можемо відразу перекладати матеріали через текстовий редактор(VSCode, Sublime, звичайний блокнот),
+                    Можемо відразу перекладати матеріали через текстовий редактор (VSCode, Sublime, звичайний блокнот),
                     або можемо використати <a href="https://crowdin.com"><i class="fa fa-globe" aria-hidden="true"></i>
                         Crowdin</a> для перекладу.
                 </p>
@@ -192,10 +190,10 @@
                     <li>Пушнути до свого репозиторію <span class="selection">git pull</span></li>
                     <li>Зробити Pull Request в репозиторій проєкту</li>
                 </ol>
-                <p>Дякую за надану інформацію:</p>
+                <p>Дзякуй за прадастаўленую інфармацыю:</p>
                 <div id="CakesTwix" class="articleauthor"></div>
                 </p>
-                <h3>Що робити якщо розробник не приймає переклад (Майнкрафт)</h3>
+                <h3>Што рабіць, калі распрацоўшчык не прымае пераклад (Minecraft)</h3>
                 <p>Саме для цього існує наш проєкт. За допомогою ресурспаку ми надаємо всім користувачам отримати досвід
                     гри з українською.</p>
                 <p>Якщо ви вже переклали і хочете поділитись перекладом, а розробник не приймає переклад, ви можете
@@ -205,7 +203,7 @@
                     заявку та додамо ваш переклад на сайт.</p>
                 <p>Звісно ви можете не надсилати Pull Request, а надіслати його файлом через зручний вам файлообмінник,
                     а ми додамо його власноруч.</p>
-                <h2>Як це працює?</h2>
+                <h2>Як гэта працуе?</h2>
                 <p>Користувач завантажує з <a href="https://modrinth.com/resourcepack/ua-translation">Modrinth</a>, <a
                         href="https://www.curseforge.com/minecraft/texture-packs/ua-translation">CurseForge</a> чи <a
                         href="https://github.com/SKZGx/UA-Translation">GitHub</a> ресурспак, встановлює в папку
@@ -218,14 +216,14 @@
     </div>
     <div class="randomitemscont">
         <div class="randomText">
-            <div>Випадкові переклади:</div>
+            <div>Выпадковыя пераклады:</div>
         </div>
         <div class="randomItems"></div>
     </div>
     <div class="footer">
         <div class="footertext">
-            <div class="infotext">© 2024 Спільнота українізації модів</div>
-            <div class="infotext">Створив MEGATREX4 з 💜 до вас</div>
+            <div class="infotext">© 2025 Суполка беларусізацыі модаў</div>
+            <div class="infotext">Зрабіў Даміян Дзіянскі з 💜 до вас</div>
             <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
         </div>
         <script type="module" src="js/countTranslations.js"></script>
