--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Спільнота Українізації Модів - Головна</title>
-  <meta name="title" content="Спільнота Українізації Модів">
+  <title>Сновія / Snovija - пераклады модаў </title>
+  <meta name="title" content="Сновія / Snovija">
 
   <meta name="description" content="Cпільнота аматорських перекладачів, які присвячують свій час та зусилля перекладу ігор на українську мову. Долучайтесь до нас!">
   <meta property="og:description" content="Cпільнота аматорських перекладачів, які присвячують свій час та зусилля перекладу ігор на українську. Долучайтесь до нас!">
