Updated Belarusian Translates

--- a/FAQ.html
+++ b/FAQ.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="TotalContainer">
-        <div class="TotalTranslation"><span id="TotalTranslation">Спільнота переклала: 000</span></div>
+        <div class="TotalTranslation"><span id="TotalTranslation">Модаў перакладзена: 000</span></div>
     </div>
     <div id="ItemContainer" class="ItemContainer">
         <div class="ItemContainerInfo">
@@ -179,10 +179,10 @@
                         репозиторій проєкту.</li>
                 </ol>
                 </p>
-                <h3>Як створити Pull Request через команди(для просунутих)</h3>
+                <h3>Як стварыць запыт на злучэнне з дапамогай каманд (пашырана)</h3>
                 <p>
                 <ol type="1">
-                    <li>Зробити форк</li>
+                    <li>Зрабіце форк</li>
                     <li>Клонувати до себе форк репозиторію <span class="selection">git clone url</span></li>
                     <li>Додати файл перекладу в відповідну теку</li>
                     <li>Додати переклад до коміту <span class="selection">git add path/to/translate</span></li>
@@ -194,10 +194,8 @@
                 <div id="CakesTwix" class="articleauthor"></div>
                 </p>
                 <h3>Што рабіць, калі распрацоўшчык не прымае пераклад (Minecraft)</h3>
-                <p>Саме для цього існує наш проєкт. За допомогою ресурспаку ми надаємо всім користувачам отримати досвід
-                    гри з українською.</p>
-                <p>Якщо ви вже переклали і хочете поділитись перекладом, а розробник не приймає переклад, ви можете
-                    надіслати Pull Request в наш проєкт <a
+                <p>Менавіта для гэтага і існуе наш праект. З дапамогай рэсурснага пакета мы даем усім карыстальнікам магчымасць гуляць з беларускай мовай.</p>
+                <p>Якщо ви вже переклали і хочете поділитись перекладом, а розробник не приймає переклад, ви можете надіслати Pull Request в наш проєкт <a
                         href="https://github.com/SKZGx/UA-Translation">UATranslation</a>, а потім заповніть форму на
                     сайті у розділі "Додати переклад", вкажіть всю інформацію що вам відома та надішліть, ми розглянемо
                     заявку та додамо ваш переклад на сайт.</p>
@@ -222,8 +220,8 @@
     </div>
     <div class="footer">
         <div class="footertext">
-            <div class="infotext">© 2025 Суполка беларусізацыі модаў</div>
-            <div class="infotext">Зрабіў Даміян Дзіянскі з 💜 до вас</div>
+            <div class="infotext">© 2025 Snovija Studios Translates</div>
+            <div class="infotext">Зроблена з гонарам для беларусаў!</div>
             <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
         </div>
         <script type="module" src="js/countTranslations.js"></script>
