--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/scrollbar.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>СУМ - команда</title>
+    <title>Сновія - каманда</title>
     <meta name="description">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -73,14 +73,14 @@
         </div>
     </div>
     <div class="TotalContainer">
-        <div class="TotalTranslation"><span id="TotalTranslation">Спільнота переклала: 000</span></div>
+        <div class="TotalTranslation"><span id="TotalTranslation">Модаў перакладзена: 000</span></div>
     </div>
     <div id="ItemContainer" class="ItemContainer">
         <div class="ItemContainerInfo">
-            <h2>Про нас</h2>
+            <h2>Пра нас</h2>
             <div class="paragraph">
-                <p>Сайт СУМ є архівом аматорської спільноти перекладачів, що працюють над українізацією, зосереджуючись переважно на перекладі модів для Minecraft. Ми використовуємо сучасні підходи до перекладу, такі як адаптація та словотвір.</p>
-                <p>У нашому повсякденному житті ми займаємося різними справами, але об'єднуємося тут для популяризації української мови в іграх. Наразі українська локалізація переживає свої найкращі часи, частка української мови в іграх невпинно зростає. Саме тому ми вирішили перекласти якомога більше модів для Minecraft українською мовою.</p>
+                <p>Сновія — гэта архіў аматарскай супольнасці перакладчыкаў, якія працуюць над узбагачэннем беларусізацыі, галоўным чынам модаў Minecraft. Мы выкарыстоўваем сучасныя падыходы да перакладу, такія як адаптацыі і словаўтварэнне.</p>
+                <p>У паўсядзённым жыцці мы робім розныя рэчы, але мы аб'яднаны тут, каб папулярызаваць украінскую мову ў гульнях. У цяперашні час беларуская лакалізацыя перажывае ня лепшыя часы, доля беларускай мовы ў гульнях вельмі мала. Таму мы вырашылі перакласці як мага больш модаў Minecraft на беларускую мову.</p>
             </div>
             <h2 class="faqtitle">Каманда</h2>
             <div class="paragraph">
@@ -96,17 +96,17 @@
                     <div id="NightyStar" class="articleauthor"></div>
                 </div>
             </div>
-            <h2 class="faqtitle">Партнери</h2>
+            <h2 class="faqtitle">Партнёры</h2>
             <div class="paragraph">
-                <p>Окреме дякую нашим партнерам, за розголос і просування української локалізації.</p>
+                <p>Асаблівая падзяка нашым партнёрам за рэкламу і прасоўванне беларускай лакалізацыі.</p>
                 <div class="authorcontainer">
                     <div id="Minestar" class="articleauthor"></div>
                     <div id="PatsiukLocalizator" class="articleauthor"></div>
                 </div>
             </div>
-            <h2 class="faqtitle">Наші соціальні мережі</h2>
+            <h2 class="faqtitle">Нашы сацыяльныя сеткі</h2>
             <div class="paragraph">
-                <p>Тут ви зможете слідкувати за нами.</p>
+                <p>Вы можаце сачыць за намі тут.</p>
                 </div>
                 <div class="social-container">
                     <a class="smallbrand social " href="https://x.com/SUMTranslate">
@@ -130,14 +130,14 @@
     </div>
     <div class="randomitemscont">
         <div class="randomText">
-            <div>Випадкові переклади:</div>
+            <div>Выпадковыя пераклады:</div>
         </div>
         <div class="randomItems"></div>
     </div>
     <div class="footer">
         <div class="footertext">
-            <div class="infotext">© 2024 Спільнота українізації модів</div>
-            <div class="infotext">Створив MEGATREX4 з 💜 до вас</div>
+            <div class="infotext">© 2025 Snovija Studios Translates</div>
+            <div class="infotext">Зроблена з гонарам для беларусаў!</div>
             <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
         </div>
         <script type="module" src="js/countTranslations.js"></script>
