Added Author & Other fixes

--- a/FAQ.html
+++ b/FAQ.html
@@ -77,7 +77,7 @@
     <div id="ItemContainer" class="ItemContainer">
         <div class="ItemContainerInfo">
             <div class="authorcontainer">
-                <div id="MEGATREX4" class="articleauthor"></div>
+                <div id="Damijan" class="articleauthor"></div>
             </div>
             <h2 class="faqtitle">Часта задаваныя пытаньні</h2>
             <div class="contents"></div>
