--- a/item.html
+++ b/item.html
@@ -60,7 +60,7 @@
     <div class="footer">
         <div class="footertext">
           <div class="infotext">© 2025 Snovija Translates</div>
-          <div class="infotext">Стварыў Даміян Дзіянскі з 💜 да вас</div>
+          <div class="infotext">Зроблена з гонарам для беларусаў!</div>
           <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
         </div>
         <script type="module" src="js/item.js"></script>
