--- a/translation.html
+++ b/translation.html
@@ -43,20 +43,20 @@
             </svg></a>
 
         <div class="headerbtn">
-            <a href="index" class="main hbtn">Головна</a>
-            <a href="about" class="team hbtn">Про нас</a>
-            <a href="faq" class="faq hbtn">ЧАПИ</a>
+            <a href="index" class="main hbtn">Галоўная</a>
+            <a href="about" class="team hbtn">Пра нас</a>
+            <a href="faq" class="faq hbtn">FAQ</a>
 
 
-                  <a href="translation" class="addtranslation hbtn">Додати переклад</a>
+                  <a href="translation" class="addtranslation hbtn">Дадаць пераклад</a>
 
       <script src="https://kit.fontawesome.com/a0ff110df7.js" crossorigin="anonymous"></script>
-      <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Підтримати</a>
+      <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Падтрымаць</a>
 
         </div>
     </div>
     <div class="TotalContainer">
-        <div class="TotalTranslation"><span id="TotalTranslation">Спільнота переклала: 000</span></div>
+        <div class="TotalTranslation"><span id="TotalTranslation">Модаў перакладзена: 000</span></div>
     </div>
     <div id="AddItemContainer" class="AddItemContainer">
         <div class="form">
@@ -195,7 +195,7 @@
 
     <div class="footer">
         <div class="footertext">
-            <div class="infotext">© 2024 Спільнота українізації модів</div>
+            <div class="infotext">© 2025 Спільнота українізації модів</div>
             <div class="infotext">Створив MEGATREX4 з 💜 до вас</div>
             <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
         </div>
