--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
             <h2 class="faqtitle">Каманда</h2>
             <div class="paragraph">
                 <div class="authorcontainer">
-                    <div id="MEGATREX4" class="articleauthor"></div>
+                    <div id="Damijan" class="articleauthor"></div>
                     <div id="hnufelka" class="articleauthor"></div>
                     <div id="CakesTwix" class="articleauthor"></div>
                     <div id="kork0za" class="articleauthor"></div>
