--- a/FAQ.html
+++ b/FAQ.html
@@ -32,7 +32,7 @@
     <meta name="revisit-after" content="1 days">
     <meta name="author" content="MEGATREX4">
 
-    <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/hJZwHlR.png">
+    <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/4FwmUUe.png">
 
     <link rel="stylesheet" href="css/var.css">
 </head>
