--- a/item.html
+++ b/item.html
@@ -26,7 +26,7 @@
   
     
 
-    <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/hJZwHlR.png">
+    <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/4FwmUUe.png">
 
 
     <link rel="stylesheet" href="css/var.css">
@@ -60,8 +60,8 @@
     <div class="footer">
         <div class="footertext">
           <div class="infotext">© 2025 Snovija Translates</div>
-          <div class="infotext">Зроблена з гонарам для беларусаў!</div>
-          <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
+          <div class="infotext">Зроблена з гонарам для беларусаў! ❤</div>
+          <div class="infotext">ГЭТЫ ПРАДУКТ НЕ ПАДТРЫМЛІВАЕЦЦА І НЕ ЗВЯЗАНЫ З MOJANG, MICROSOFT АЛЬБО STEAM.</div>
         </div>
         <script type="module" src="js/item.js"></script>
         <script type="module" src="js/countTranslations.js"></script>
