--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div class="header">
     <a href="index" class="logo">
-      <img src="images/snovija-logo.png" alt="Logo" width="370" height="370">
+      <img src="snovija-logo.png" alt="Logo" width="370" height="370">
     <div class="headerbtn">
       <a class="main hbtn">Галоўная</a>
       <a href="about" class="team hbtn">Пра нас</a>
