--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
 
   <div class="header">
     <a href="index" class="logo">
-      <img src="logo.png" alt="Logo" width="50" height="50">
+      <img src="logo.jpg" alt="Logo" width="35" height="35">
+      <style>
+        .logo img {
+          border-radius: 20px;
+        }
+        </style>
     <div class="headerbtn">
       <a class="main hbtn">Галоўная</a>
       <a href="about" class="team hbtn">Пра нас</a>
