--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta property="og:url" content="https://snovija.netlify.app/">
   <meta property="og:title" content="Сновія / Snovija - пераклады модаў">
 
-  <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/4FwmUUe.png">
+  <link rel="icon" type=" image/x-icon" href="title2.png">
 
 
     <link rel="stylesheet" href="css/var.css">
@@ -48,7 +48,7 @@
 
   <div class="header">
     <a href="index" class="logo">
-      <img src="logo.jpg" alt="Logo" width="35" height="35">
+      <img src="title2.png" alt="Logo" width="145" height="35">
       <style>
         .logo img {
           border-radius: 20px;
