--- a/about.html
+++ b/about.html
@@ -42,30 +42,17 @@
 <body>
     <div class="header">
         <a href="index" class="logo">
-            <svg id="be03f596-d4a4-4aa0-b150-31f929567437" data-name="Шар 1" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 370 370">
-                <defs>
-                    <style>
-                        .b7f69e4e-d2aa-4f23-9e30-20b0a6dd5fff {
-                            fill: snow;
-                        }
-
-                        .a83e0ca3-bfc9-4cd3-95a9-f4d9c9eb972d {
-                            fill: #873735;
-                        }
-                    </style>
-                </defs>
-                <rect class="b7f69e4e-d2aa-4f23-9e30-20b0a6dd5fff" width="370" height="370" rx="50" />
-                <path class="a83e0ca3-bfc9-4cd3-95a9-f4d9c9eb972d"
-                    d="M296.71,124.58c17.26,0,34.53,0,51.8,0,11.16,0,19.05,5.52,24.32,15.1,2.39,4.33,2.89,9.11,3.1,14,.56,12.51.88,25,1.79,37.51a26.4,26.4,0,0,1-26.84,28.39A31.83,31.83,0,0,0,319.3,244a26.33,26.33,0,0,0,.29,13.48c4.93,18.33,21.31,30,38.26,36.53,24.89,9.44,21.7,51.93,19.34,73.53-1.89,13.62-13.48,20-26.56,19.79-30.51.07-61,.37-91.54,0-63.61,1-118-51.7-124.87-114-6.86-54.5,22.59-110.48,70.43-137.11a98.44,98.44,0,0,1,35.92-11.45C259.26,124.38,278,124.68,296.71,124.58Z"
-                    transform="translate(-80 -71)" />
-            </svg></a>
-
+            <img src="title2.png" alt="Logo" width="145" height="35">
+            <style>
+              .logo img {
+                border-radius: 20px;
+              }
+              </style>
         <div class="headerbtn">
             <a href="index" class="main hbtn">Галоўная</a>
             <a href="about" class="team hbtn">Пра нас</a>
             <a href="faq" class="faq hbtn">FAQ</a>
-                  <a href="translation" class="addtranslation hbtn">Дадаць пераклад</a>
+            <a href="translation" class="addtranslation hbtn">Дадаць пераклад</a>
 
       <script src="https://kit.fontawesome.com/a0ff110df7.js" crossorigin="anonymous"></script>
       <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Падтрымаць</a>
