many works (idk what write here)

--- a/FAQ.html
+++ b/FAQ.html
@@ -32,7 +32,7 @@
     <meta name="revisit-after" content="1 days">
     <meta name="author" content="MEGATREX4">
 
-    <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/4FwmUUe.png">
+    <link rel="icon" type=" image/x-icon" href="icon.png">
 
     <link rel="stylesheet" href="css/var.css">
 </head>
@@ -40,7 +40,7 @@
 <body>
     <div class="header">
         <a href="index" class="logo">
-            <img src="title2.png" alt="Logo" width="145" height="35">
+            <img src="title2.png" alt="Logo" width="145" height="39">
             <style>
               .logo img {
                 border-radius: 20px;
@@ -65,31 +65,25 @@
             <div class="authorcontainer">
                 <div id="Damijan" class="articleauthor"></div>
             </div>
-            <h2 class="faqtitle">Часта задаваныя пытаньні</h2>
+            <h1 class="faqtitle">Часта задаваныя пытаньні</h1>
             <div class="contents"></div>
             <div class="paragraph">
 
-                <h4>Што гэта за сайт?</h4>
-                <p>Сновія — гэта архіў аматарскай супольнасці перакладчыкаў, якія працуюць над узбагачэннем беларусізацыі, 
-                    галоўным чынам модаў Minecraft. Мы выкарыстоўваем сучасныя падыходы да перакладу, такія як адаптацыі і словаўтварэнне.</p>
-
-                <h4>Як пачаць перакладаць?</h4>
-                <h3>Minecraft</h3>
-                <p>Перад тым, як пачаць спампоўваць файлы, паспрабуйце пашукаць Crowdin праекта, 
-                   ён часта публікуецца на серверах Discord праекта або непасрэдна на старонках модаў.</p>
-                <h2>Што рабіць, калі ў праекце ёсць Crowdin, але няма беларускай?</h2>
+                <h1 class="faqtitle">Што гэта за сайт?</h1>
+                <p>Сновія — гэта архіў аматарскай супольнасці перакладчыкаў, якія працуюць над узбагачэннем беларусізацыі, галоўным чынам модаў Minecraft. Мы выкарыстоўваем сучасныя падыходы да перакладу, такія як адаптацыі і словаўтварэнне.</p>
+                <h4 class="faqtitle">Як пачаць перакладаць?</h4>
+                <p>Перад тым, як пачаць спампоўваць файлы, паспрабуйце пашукаць Crowdin праекта, ён часта публікуецца на серверах Discord праекта або непасрэдна на старонках модаў.</p>
+                <h3>Што рабіць, калі ёсць Crowdin, але няма нашай мовы?</h3>
                 <p>
                 <ol type="1">
-                    <li>Створіть тему на Crowdin де англійською мовою представтесь, напишіть що бажаєте перекласти їх
-                        мод рідною мовою і що це дуже важливо для вас. Обов'язково зазначте свій рівень
-                        англійської(Beginner, Elementary, Intermediate, Upper-Intermediate, Advanced) та української(ви
+                    <li>Створіть тему на Crowdin де англійською мовою представтесь, напишіть що бажаєте перекласти їх мод рідною мовою і що це дуже важливо для вас. Обов'язково зазначте свій рівень англійської (Beginner, Elementary, Intermediate, Upper-Intermediate, Advanced) та української (ви
                         скоріш за все Native Speaker).</li>
                     <li>Вы таксама можаце зайсці на сервер праекта ў Discord і спытаць там, ці можна неяк перакласці іх мод.
                     </li>
                 </ol>
                 </p>
                 <p>Заўсёды будзьце гатовыя да таго, што распрацоўшчыкі могуць адмовіць альбо праігнараваць.</p>
-                <h2>Crowdin не мае праекта, што далей?</h2>
+                <h3>Crowdin не мае праекта, што далей?</h3>
                 <p>
                 <ol type="1">
                     <li>Спампуйце мод з Modrinth або CurseForge</li>
@@ -102,98 +96,71 @@
                 </ol>
                 </p>
                 <p>
-                    Можемо відразу перекладати матеріали через текстовий редактор (VSCode, Sublime, звичайний блокнот),
-                    або можемо використати <a href="https://crowdin.com"><i class="fa fa-globe" aria-hidden="true"></i>
-                        Crowdin</a> для перекладу.
+                    Мы можам адразу перакласці матэрыялы праз тэкставы рэдактар (VSCode, Sublime, звычайны Notepad),
+                    альбо мы можам выкарыстоўваць <a href="https://crowdin.com"><i class="fa fa-globe" aria-hidden="true"></i>
+                        Crowdin</a> для перакладу.
                 </p>
 
-                <h2>Що якщо розробник не залишив файл з перекладом?</h2>
-                <p>Буває й таке що розробник може не залишити файл з перекладом, з цим нам допоможе мод <a
+                <h3>Што рабіць, калі распрацоўшчык не пакінуў файл перакладу?</h3>
+                <p>Здараецца і так, што распрацоўшчык можа не пакінуць файл з перакладам, у гэтым нам дапаможа мод <a
                         href="https://modrinth.com/mod/itemlog"><i class="fa fa-external-link-square"
-                            aria-hidden="true"></i> ItemLog</a>. Він виводить в консоль гри всі існуючі предмети з гри у
-                    вигляді ключів, нам лише залишається зберігти файл у вигляді en_us.json і це буде нам вихідний код з
-                    ключами.
-                </p>
+                            aria-hidden="true"></i> ItemLog</a>. Ён адлюстроўвае ўсе існуючыя прадметы з гульні ў выглядзе ключоў да гульнявой кансолі, нам трэба толькі захаваць файл як en_us.json і гэта будзе наш зыходны код з ключамі.</p>
 
-                <h3>Інші ігри/програми</h3>
-                <p>
-                    Все залежить від рушія гри та того як розробник обрав перекласти свою гру, це може варіюватись від
-                    файлу що знаходитиься в папці або це може бути архівований файл(часто зустрічається в Unity).
-                </p>
-                <p>Чудово тему розкрив memz у своєму посібнику, можете з ним ознайомитись <a
-                        href="https://ukrainizer.netlify.app/">на його сайті</a>. В керівництві він пояснює як створити
-                    українізатор для більшості популярних рушіїв як-от Unity, Unreal Engine, Godot Engine, CryEngine чи
-                    GameMaker: Studio.</p>
-
-                <h4>Як використовувати Crowdin?</h4>
-                <div class="warning">
-                    На платформі існує обмеження у 60 тис. слів для безкоштовних облікових записів та 100 тис. для
-                    проєктів з відкритим вихідним кодом.
+                <h4 class="faqtitle">Як карыстацца Crowdin?</h4>
+                <div class="warning" style="background-color: #b30000; color: white;">
+                    Платформа мае абмежаванне ў 60 000 слоў для бясплатных акаўнтаў і 100 000 для праектаў з адкрытым зыходным кодам.
                 </div>
                 <p>
                 <ol type="1">
-                    <li>Заходимо або створюємо обліковий запис (можна використати Google, Facebook, Github або інші)
-                    </li>
-                    <li>На сторінці профілю створюємо новий проєкт</li>
-                    <li>Проходимо просте налаштування</li>
-                    <li>На сторінці проєкту обираємо Sources</li>
-                    <li>Завантажуємо видобуті файли</li>
-                    <li>Налаштовуємо файл якщо сайт просить про це(поки таке зустрічали тільки з csv)</li>
-                    <li>На вкладці Dashbord обираємо українську</li>
-                    <li>Обираємо файл що хочемо перекласти</li>
-                    <li>Перекладаємо</li>
-                    <li>Після перекладу на вкладці Translations натискаємо Build & Download </li>
+                    <li>Увайдзіце або стварыце ўліковы запіс (вы можаце выкарыстоўваць Google, Facebook, Github або іншыя)</li>
+                    <li>Стварыце новы праект на старонцы вашага профілю</li>
+                    <li>Праходзім простую наладу</li>
+                    <li>На старонцы праекта абярыце «Крыніцы»</li>
+                    <li>Спампаваць распакаваныя файлы</li>
+                    <li>Мы наладжваем файл, калі сайт запытвае яго (пакуль што такое сустракалася толькі з csv)</li>
+                    <li>На ўкладцы «Панэль кіравання» абярыце «Беларуская»</li>
+                    <li>Выберыце файл, які вы хочаце перакласці</li>
+                    <li>Перакладаем</li>
+                    <li>Пасля перакладу на ўкладцы «Пераклады» націсніце «Стварыць і загрузіць» </li>
                 </ol>
                 </p>
 
-                <h4>Як додати переклад?</h4>
-                <p>На цьому моменті можуть бути проблеми, оскільки не всі розробники приймають переклади від спільноти.
-                </p>
-                <p>Якщо це проєкт з відкритим кодом на GitHub то можна надіслати ваш переклад як Pull Request.</p>
-                <h3>Як створити Pull Request через вебінтерфейс</h3>
+                <h4>Як дадаць пераклад?</h4>
+                <p>На гэтым этапе могуць узнікнуць праблемы, бо не ўсе распрацоўшчыкі прымаюць пераклады ад супольнасці.</p>
+                <p>Калі гэта праект з адкрытым зыходным кодам на GitHub, вы можаце адправіць свой пераклад як Pull Request.</p>
+                <h3>Як стварыць запыт на злучэнне праз вэб-інтэрфейс?</h3>
                 <p>
                 <ol type="1">
-                    <li>Заходимо на GitHub проєкт (він часто прикріплений на CurseForge та Modrinth як SourceCode або
-                        Issue)</li>
-                    <li>Робимо форк проєкту натиснувши на кнопку <span class="selection"><i class="fa fa-code-fork"
-                                aria-hidden="true"></i> Fork</span> на сторінці проєкту. Таким чином ми створюємо копію
-                        проєкту в себе на GitHub.</li>
-                    <li>Наступним кроком буде завантажити в форк файл перекладу за наступним шляхом створивши відповідні
-                        теки <span class="selection"> assets → [Тека з назвою моду] → lang</span>(Назву теки можна
-                        подивитись в jar файлі моду, відкривши його за допомогою архіватора).</li>
-                    <li>Після відправки commit'у перейдіть назад в оригінальний репозиторій і створіть Pull Request в
-                        репозиторій проєкту.</li>
+                    <li>Перайдзіце на старонку праекта GitHub (ён часта замацаваны на CurseForge і Modrinth як Source Code або Issue).</li>
+                    <li>Трэба зрабіць форк праэкту націснув на кнопку <span class="selection"><i class="fa fa-code-fork" aria-hidden="true"></i> Fork</span> на старонцы праекта. Такім чынам мы ствараем копію
+                        праекта на нашым GitHub.</li>
+                    <li>Наступным крокам будзе загрузка файла перакладу ў форк па наступным шляху, стварыўшы адпаведныя тэчкі <span class="selection"> assets → [Тэчка з назвою мода] → lang</span> (Вы можаце ўбачыць назву тэчкі ў jar-файле мода, адкрыўшы яго архіватарам).</li>
+                    <li>Пасля адпраўкі каміта вярніцеся ў зыходны рэпазітар і стварыце Pull Request у рэпазіты праекта.</li>
                 </ol>
                 </p>
-                <h3>Як стварыць запыт на злучэнне з дапамогай каманд (пашырана)</h3>
+                <h3>Як стварыць запыт на злучэнне з дапамогай каманд</h3>
                 <p>
                 <ol type="1">
                     <li>Зрабіце форк</li>
-                    <li>Клонувати до себе форк репозиторію <span class="selection">git clone url</span></li>
-                    <li>Додати файл перекладу в відповідну теку</li>
-                    <li>Додати переклад до коміту <span class="selection">git add path/to/translate</span></li>
-                    <li>Зробити commit <span class="selection">git commit -m "Added ukrainian translate"</span></li>
-                    <li>Пушнути до свого репозиторію <span class="selection">git pull</span></li>
-                    <li>Зробити Pull Request в репозиторій проєкту</li>
+                    <li>Кланіруйце форк рэпазітара да сябе <span class="selection">git clone url</span></li>
+                    <li>Дадайце файл перакладу ў адпаведную тэчку</li>
+                    <li>Дадаць пераклад да коміту <span class="selection">git add path/to/translate</span></li>
+                    <li>Зрабіць commit <span class="selection">git commit -m "Added belarusian translate"</span></li>
+                    <li>Адправіць у свой рэпазітар <span class="selection">git pull</span></li>
+                    <li>Зрабіць запыт на зліццё (pull request) у рэпазітар праекта</li>
                 </ol>
                 <p>Дзякуй за прадастаўленую інфармацыю:</p>
                 <div id="CakesTwix" class="articleauthor"></div>
                 </p>
-                <h3>Што рабіць, калі распрацоўшчык не прымае пераклад (Minecraft)</h3>
+                <h3>Што рабіць, калі распрацоўшчык не прымае пераклад?</h3>
                 <p>Менавіта для гэтага і існуе наш праект. З дапамогай рэсурснага пакета мы даем усім карыстальнікам магчымасць гуляць з беларускай мовай.</p>
-                <p>Якщо ви вже переклали і хочете поділитись перекладом, а розробник не приймає переклад, ви можете надіслати Pull Request в наш проєкт <a
-                        href="https://github.com/SKZGx/UA-Translation">UATranslation</a>, а потім заповніть форму на
-                    сайті у розділі "Додати переклад", вкажіть всю інформацію що вам відома та надішліть, ми розглянемо
-                    заявку та додамо ваш переклад на сайт.</p>
-                <p>Звісно ви можете не надсилати Pull Request, а надіслати його файлом через зручний вам файлообмінник,
-                    а ми додамо його власноруч.</p>
-                <h2>Як гэта працуе?</h2>
-                <p>Користувач завантажує з <a href="https://modrinth.com/resourcepack/ua-translation">Modrinth</a>, <a
-                        href="https://www.curseforge.com/minecraft/texture-packs/ua-translation">CurseForge</a> чи <a
-                        href="https://github.com/SKZGx/UA-Translation">GitHub</a> ресурспак, встановлює в папку
-                    ресурспаків у корені
-                    гри та вибирає наш архів, перетягнуши його на саму гору. Цим він застосовує файли локалізацій до
-                    всіх модів що є в ресурспаку.</p>
+                <p>Калі вы ўжо пераклалі і хочаце падзяліцца перакладам, але распрацоўшчык не прымае пераклад, вы можаце адправіць Pull Request у наш праект <a
+                        href="https://github.com/dzijanski/SnovijaMods">SnovijaMods</a>, а затым запоўніце форму на сайце ў раздзеле «Дадаць пераклад», падайце ўсю вядомую вам інфармацыю і адпраўце яе, мы разгледзім заяўку і дадамо ваш пераклад на сайт.</p>
+                <p>Вядома, вы можаце не адпраўляць запыт на злучэнне (Pull Request), а адправіць яго ў выглядзе файла праз зручны для вас сэрвіс абмену файламі, і мы дадамо яго самі.</p>
+                <h3>Як гэта працуе?</h3>
+                <p>Спампоўванне карыстальнікам з <a href="https://modrinth.com/resourcepack/ua-translation">Modrinth</a>, <a
+                        href="https://www.curseforge.com/minecraft/texture-packs/ua-translation">CurseForge</a> альбо <a
+                        href="https://github.com/SKZGx/UA-Translation">GitHub</a> рэсурспаку, усталёўваецца ў тэчку з рэсурс-пакам у корані гульні і выбірае наш архіў, перацягваючы яго ўверх. Гэта прымяняе файлы лакалізацыі да ўсіх модаў у рэсурс-паке.</p>
                 <p>
             </div>
         </div>
@@ -207,8 +174,7 @@
     <div class="footer">
         <div class="footertext">
             <div class="infotext">© 2025 Snovija Studios Translates</div>
-            <div class="infotext">Зроблена з гонарам для беларусаў!</div>
-            <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
+            <div class="infotext">Зроблена з гонарам для беларусаў! ❤</div>
         </div>
         <script type="module" src="js/countTranslations.js"></script>
         <script src="js/randomItems.js"></script>
