--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <meta name="revisit-after" content="1 days">
     <meta name="author" content="MEGATREX4">
 
-    <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/hJZwHlR.png">
+    <link rel="icon" type=" image/x-icon" href="icon.png">
 
 
     <link rel="stylesheet" href="css/var.css">
@@ -42,7 +42,7 @@
 <body>
     <div class="header">
         <a href="index" class="logo">
-            <img src="title2.png" alt="Logo" width="145" height="35">
+            <img src="title2.png" alt="Logo" width="145" height="39">
             <style>
               .logo img {
                 border-radius: 20px;
@@ -64,7 +64,7 @@
     </div>
     <div id="ItemContainer" class="ItemContainer">
         <div class="ItemContainerInfo">
-            <h2>Пра нас</h2>
+            <h2 class="faqtitle">Пра нас</h2>
             <div class="paragraph">
                 <p>Сновія — гэта архіў аматарскай супольнасці перакладчыкаў, якія працуюць над узбагачэннем беларусізацыі, галоўным чынам модаў Minecraft. Мы выкарыстоўваем сучасныя падыходы да перакладу, такія як адаптацыі і словаўтварэнне.</p>
                 <p>У паўсядзённым жыцці мы робім розныя рэчы, але мы аб'яднаны тут, каб папулярызаваць украінскую мову ў гульнях. У цяперашні час беларуская лакалізацыя перажывае ня лепшыя часы, доля беларускай мовы ў гульнях вельмі мала. Таму мы вырашылі перакласці як мага больш модаў Minecraft на беларускую мову.</p>
@@ -124,8 +124,7 @@
     <div class="footer">
         <div class="footertext">
             <div class="infotext">© 2025 Snovija Studios Translates</div>
-            <div class="infotext">Зроблена з гонарам для беларусаў!</div>
-            <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
+            <div class="infotext">Зроблена з гонарам для беларусаў! ❤</div>
         </div>
         <script type="module" src="js/countTranslations.js"></script>
         <script src="js/randomItems.js"></script>
