--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta property="og:url" content="https://snovija.netlify.app/">
   <meta property="og:title" content="Сновія / Snovija - пераклады модаў">
 
-  <link rel="icon" type=" image/x-icon" href="title2.png">
+  <link rel="icon" type=" image/x-icon" href="icon.png">
 
 
     <link rel="stylesheet" href="css/var.css">
@@ -48,7 +48,7 @@
 
   <div class="header">
     <a href="index" class="logo">
-      <img src="title2.png" alt="Logo" width="145" height="35">
+      <img src="title2.png" alt="Logo" width="145" height="39">
       <style>
         .logo img {
           border-radius: 20px;
@@ -93,9 +93,8 @@
     </div>
     <div class="footer">
       <div class="footertext">
-        <div class="infotext">© 2025 Snovija Translates</div>
+        <div class="infotext">© 2025 Snovija Studios Translates</div>
         <div class="infotext">Зроблена з гонарам для беларусаў! ❤</div>
-        <div class="infotext">ГЭТЫ ПРАДУКТ НЕ ПАДТРЫМЛІВАЕЦЦА І НЕ ЗВЯЗАНЫ З MOJANG, MICROSOFT АЛЬБО STEAM.</div>
       </div>
     </div>
   </div>
