--- a/item.html
+++ b/item.html
@@ -26,7 +26,7 @@
   
     
 
-    <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/4FwmUUe.png">
+    <link rel="icon" type=" image/x-icon" href="icon.png">
 
 
     <link rel="stylesheet" href="css/var.css">
@@ -34,7 +34,7 @@
 <body>
     <div class="header">
       <a href="index" class="logo">
-        <img src="title2.png" alt="Logo" width="145" height="35">
+        <img src="title2.png" alt="Logo" width="145" height="39">
         <style>
           .logo img {
             border-radius: 20px;
