--- a/submited.html
+++ b/submited.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/scrollbar.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>СУМ - переклад надіслано</title>
+  <title>Сновія - пераклад адпраўлены</title>
   <meta name="description">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <link rel="stylesheet" href="css/item.css">
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/randomitems.css">
   <link rel="stylesheet" href="css/submited.css">
 
-  <link rel="icon" type=" image/x-icon" href="https://i.imgur.com/hJZwHlR.png">
+  <link rel="icon" type=" image/x-icon" href="icon.png">
 
 
     <link rel="stylesheet" href="css/var.css">
@@ -25,49 +25,48 @@
 <body>
   <div class="header">
     <a href="index" class="logo">
-      <img src="title2.png" alt="Logo" width="145" height="35">
+      <img src="title2.png" alt="Logo" width="145" height="39">
       <style>
         .logo img {
           border-radius: 20px;
         }
         </style>
     <div class="headerbtn">
-      <a href="index" class="main hbtn">Головна</a>
-      <a href="about" class="about hbtn">Про нас</a>
-      <a href="faq" class="faq hbtn">ЧАПИ</a>
-      <a href="translation" class="addtranslation hbtn">Додати переклад</a>
+      <a href="index" class="main hbtn">Галоўная</a>
+      <a href="about" class="about hbtn">Пра нас</a>
+      <a href="faq" class="faq hbtn">FAQ</a>
+      <a href="translation" class="addtranslation hbtn">Дадаць пераклад</a>
 
       <script src="https://kit.fontawesome.com/a0ff110df7.js" crossorigin="anonymous"></script>
-      <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Підтримати</a>
+      <a href="https://send.monobank.ua/jar/3eoWaEfxde" class="addtranslation hbtn"><i class="fa-solid fa-gift"></i> Падтрымаць</a>
     </div>
   </div>
   <div class="TotalContainer">
-    <div class="TotalTranslation"><span id="TotalTranslation">Спільнота переклала: 000</span></div>
+    <div class="TotalTranslation"><span id="TotalTranslation">Модаў перакладзена: 000</span></div>
   </div>
   <div id="ItemContainer" class="subcont ItemContainer">
     <div class="ItemContainerInfo">
       <img src="https://i.imgur.com/IMQLyEC.png" height="300px" alt="Зображення ''щось не так''">
-      <div class="text404">Ваш переклад надіслано,</div>
-      <div class="text404">очікуйте відповіді.</div>
+      <div class="text404">Ваш пераклад адпраўлены,</div>
+      <div class="text404">пачакайце адказу.</div>
       <div class="buttonsCont">
-        <a href="index" class="button404">Перейти на головну</a>
-        <a href="translation" class="button404 addmore">Додати ще</a>
+        <a href="index" class="button404">Перайсці на галоўную</a>
+        <a href="translation" class="button404 addmore">Дадаць яшчэ</a>
       </div>
     </div>
   </div>
 
   <div class="randomitemscont">
     <div class="randomText">
-      <div>Випадкові переклади:</div>
+      <div>Выпадковыя пераклады:</div>
     </div>
     <div class="randomItems"></div>
   </div>
 
   <div class="footer">
     <div class="footertext">
-      <div class="infotext">© 2024 Спільнота українізації модів</div>
-      <div class="infotext">Створив MEGATREX4 з 💜 до вас</div>
-      <div class="infotext">THIS PRODUCT IS NOT SUPPORTED BY OR AFFILIATED WITH MOJANG MICROSOFT OR STEAM.</div>
+      <div class="infotext">© 2025 Snovija Studios Translates</div>
+      <div class="infotext">Зроблена з гонарам для беларусаў! ❤</div>
     </div>
     <script type="module" src="js/countTranslations.js"></script>
     <script src="js/randomItems.js"></script>
