--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div id="Pages" class="PagesContainer"></div>
       </div>
     </div>
-    <div class="footer">
+    <div class="footer" style="height: 100%;">
       <div class="footertext">
         <div class="infotext">© 2025 Snovija Studios Translates</div>
         <div class="infotext">Зроблена з гонарам для беларусаў! ❤</div>
